spacing issues

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -205,6 +205,11 @@ a:focus {
 	border-bottom: 2px solid #ffffff;
 	margin-bottom: 25px;
 }
+
+.navbar-header {
+	margin-top: 20px;
+	padding-bottom: 20px;
+}
 /*	################################################################
 	SITE WRAPS
 ################################################################# */
@@ -255,6 +260,10 @@ a:focus {
 	margin-bottom: 25px;
 }
 
+.portfolio-centered {
+
+
+}
 .portfolio {
 	padding:0 !important;
 	margin:0 !important;
@@ -380,11 +389,9 @@ a:focus {
 
 #blue {
 	background: {{ site.colors.primary }};
-	margin-top: 60px;
-	margin-bottom: 30px;
-	padding-top: 25px;
-	padding-bottom: 25px;
-}
+	    margin-top: 100px;
+	    padding-bottom: 15px;
+	}
 
 #blue h3 {
 	color: white;
